--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "alert-api",
   "version": "1.0.0",
+  "main": "server.js",
   "type": "module",
-  "dependencies": {
-    "express": "^4.18.2",
-    "twilio": "^4.21.0"
-  },
   "scripts": {
     "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.19.2",
+    "body-parser": "^1.20.2",
+    "twilio": "^4.23.0",
+    "dotenv": "^16.4.5"
   }
 }
